fix text size on iphone

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,7 +16,6 @@ $base-line-height: 1.5;
 
 html {
   font-family: $base-font-family;
-  font-size: $base-font-size;
 }
 
 .small-title {
